2005-05-27  Theodore Papadopoulo  <Theodore.Papadopoulo@sophia.inria.fr>

	* src/misc-inst.cc: Remove unnecessary included files.

2005-05-27  Benjamin Kosnik  <bkoz@redhat.com>

	* include/bits/c++config: Remove extern template use when in debug
	mode, disable for non-weak systems.
	
2005-05-27  Benjamin Kosnik  <bkoz@redhat.com>

	PR libstdc++/20534 
	* include/debug/debug.h: Forwarding header, that pulls in details
	only if in debug mode.
	* include/debug/macros.h: ...transfer all the internal macros here.
	* include/debug/functions.h: ...transfer all the functions here.
	* include/debug/safe_iterator.h: Add functions.h, macros.h includes.
	* include/debug/safe_sequence.h: Same.
	* include/debug/vector: Tweak.
	* include/Makefile.am (debug_headers): Add new includes.
	* include/Makefile.in: Regenerate.
	* testsuite/17_intro/no_assert_neg.cc: Add.

	* include/ext/hash_set: Add debug mode include.
	* include/ext/hash_map: Same.
	* include/debug/hash_map: Fix included files to match actual files.
	* include/debug/hash_set: Same.
		
2005-05-26  Paolo Carlini  <pcarlini@suse.de>

	PR libstdc++/13943
	* include/c_std/std_cstdlib.h: Do not open code llabs and lldiv,
	available when _GLIBCXX_USE_C99 is defined.
	* testsuite/26_numerics/cstdlib/13943.cc: New.

	* acinclude.m4 ([GLIBCXX_ENABLE_C99]): For completeness, check
	also strtoll and strtoull for ac_c99_stdlib.
	* configure: Regenerate.

2005-05-25  Benjamin Kosnik  <bkoz@redhat.com>

	* config/linker-map.gnu: Add linkage support for no extern templates.
	(std::ios_base::_M_call_callbacks): Add.
	(std::ios_base::_M_dispose_callbacks): Add.
	(std::locale::facet::_S_get_c_name): Add.
	(std::__copy_streambufs): Add.
	* configure.ac (libtool_VERSION): To 6:5:0.
	* configure: Regenerate.
	* testsuite/testsuite_abi.cc (check_version): Add GLIBCXX_3.4.5.
	
2005-05-25  Paolo Carlini  <pcarlini@suse.de>

	* include/bits/basic_string.h (_Rep::_M_set_length_and_sharable):
	Use, consistently, traits_type::assign.
