@@ -427,8 +427,8 @@ Example 4: Testing for compilation errors on line 41
 
 Example 5: Testing with special command line settings, or without the
 use of pre-compiled headers, in particular the stdc++.h.gch file. Any
-options here will override the DEFAULT_CXXFLAGS set up in the
-normal.exp file.
+options here will override the DEFAULT_CXXFLAGS and PCH_CXXFLAGS set
+up in the normal.exp file.
 // { dg-options "-O0" { target *-*-* } }
 </pre>
 
